--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                 <a href="https://github.com/aam-himel" target="_blank"><i class="fab fa-github-square"></i></a>
                 <a href="https://medium.com/@asimachowdhury.lu" target="_blank"><i class="fab fa-medium"></i></a>
             </div>
-            <p class="text-white pt-2"><small>Copyright &copy; 2020 by Asima || All Right Reserved.</small></p>
+            <p class="text-white pt-2"><small>Copyright &copy; 2020 by aamHimel || All Right Reserved.</small></p>
         </div>
     </footer>
     <!------------------- Footer-area end------------------>
