--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
                             <a class="nav-link" href="#contact">Contact</a>
                         </li>
                         <li class="nav-item px-2">
-                            <a href=""
-                                target="_blank">
+                            <a href="" target="_blank">
                                 <button type="button" class="btn btn-success">Resume</button>
                             </a>
                         </li>
@@ -76,15 +75,14 @@
                                         class="fab fa-linkedin"></i></a>
                                 <a href="https://github.com/aam-himel" target="_blank"><i
                                         class="fab fa-github-square"></i></a>
-                                <a href="https://medium.com/@asimachowdhury.lu" target="_blank"><i
+                                <a href="https://medium.com/@aam.himel" target="_blank"><i
                                         class="fab fa-medium"></i></a>
                             </div>
                             <div class="home-resume pt-4">
                                 <a href="#about">
                                     <button type="button" class="btn btn-success mr-3">About me</button>
                                 </a>
-                                <a href=""
-                                    target="_blank">
+                                <a href="" target="_blank">
                                     <button type="button" class="btn btn-outline-success">Resume</button>
                                 </a>
                             </div>
@@ -108,15 +106,14 @@
                     <h6 class="green-highlight">Hello! I'm</h6>
                     <h2>Abdullah Al Mamun</h2>
                     <p class="py-3">
-                        I'm a self motivated, career focused Full Stack Web Developer, intended to develop solutions to support large numbers of users as well as enterprises
+                        I'm a self motivated, career focused Full Stack Web Developer, intended to develop solutions to
+                        support large numbers of users as well as enterprises
                     </p>
                     <div class="social-media">
                         <a href="https://www.linkedin.com/in/aam-himel" target="_blank"><i
                                 class="fab fa-linkedin"></i></a>
-                        <a href="https://github.com/aam-himel" target="_blank"><i
-                                class="fab fa-github-square"></i></a>
-                        <a href="https://medium.com/@asimachowdhury.lu" target="_blank"><i
-                                class="fab fa-medium"></i></a>
+                        <a href="https://github.com/aam-himel" target="_blank"><i class="fab fa-github-square"></i></a>
+                        <a href="https://medium.com/@aam.himel" target="_blank"><i class="fab fa-medium"></i></a>
                     </div>
                 </div>
                 <div class="col-md-5 offset-md-1 about-img col-auto">
@@ -251,8 +248,8 @@
                         <div class="card-footer">
                             <div class="d-flex justify-content-center">
                                 <div class="btn btn-outline-success mr-3">
-                                    <a href="https://github.com/aam-himel/volunteer-network-client"
-                                        target="_blank" class="green-highlight">GitHub</a>
+                                    <a href="https://github.com/aam-himel/volunteer-network-client" target="_blank"
+                                        class="green-highlight">GitHub</a>
                                 </div>
                                 <div class="btn btn-outline-success">
                                     <a href="https://volunteer-net-project.web.app/" target="_blank"
@@ -385,8 +382,7 @@
                             </div>
                             <div class="card-footer">
                                 <div class="btn btn-outline-success">
-                                    <a href="https://medium.com/@asimachowdhury.lu/20-must-learn-interview-questions-from-html-ff9ccf9583cc"
-                                        target="_blank" class="green-highlight">Read More</a>
+                                    <a href="#" target="_blank" class="green-highlight">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -402,8 +398,7 @@
                             </div>
                             <div class="card-footer">
                                 <div class="btn btn-outline-success">
-                                    <a href="https://medium.com/@asimachowdhury.lu/20-must-learn-interview-questions-from-html-ff9ccf9583cc"
-                                        target="_blank" class="green-highlight">Read More</a>
+                                    <a href="#" target="_blank" class="green-highlight">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -418,8 +413,7 @@
                             </div>
                             <div class="card-footer">
                                 <div class="btn btn-outline-success">
-                                    <a href="https://medium.com/@asimachowdhury.lu/20-must-learn-interview-questions-from-html-ff9ccf9583cc"
-                                        target="_blank" class="green-highlight">Read More</a>
+                                    <a href="#" target="_blank" class="green-highlight">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -472,10 +466,9 @@
                 <img src="images/logo.png" alt="logo" class="logo">
             </a>
             <div class="social-media">
-                <a href="https://www.linkedin.com/in/aam-himel" target="_blank"><i
-                        class="fab fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/aam-himel" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/aam-himel" target="_blank"><i class="fab fa-github-square"></i></a>
-                <a href="https://medium.com/@asimachowdhury.lu" target="_blank"><i class="fab fa-medium"></i></a>
+                <a href="https://medium.com/@aam.himel" target="_blank"><i class="fab fa-medium"></i></a>
             </div>
             <p class="text-white pt-2"><small>Copyright &copy; 2020 by aamHimel || All Right Reserved.</small></p>
         </div>
