--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <h5>I'm a <span class="green-highlight py-3">Web Developer</span>
                             </h5>
                             <div class="social-media">
-                                <a href="https://www.linkedin.com/in/aam-himel" target="_blank"><i
+                                <a href="https://www.https://www.linkedin.com/in/aamhimel/" target="_blank"><i
                                         class="fab fa-linkedin"></i></a>
                                 <a href="https://github.com/aam-himel" target="_blank"><i
                                         class="fab fa-github-square"></i></a>
@@ -110,7 +110,7 @@
                         support large numbers of users as well as enterprises
                     </p>
                     <div class="social-media">
-                        <a href="https://www.linkedin.com/in/aam-himel" target="_blank"><i
+                        <a href="https://www.https://www.linkedin.com/in/aamhimel/" target="_blank"><i
                                 class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/aam-himel" target="_blank"><i class="fab fa-github-square"></i></a>
                         <a href="https://medium.com/@aam.himel" target="_blank"><i class="fab fa-medium"></i></a>
@@ -466,7 +466,8 @@
                 <img src="images/logo.png" alt="logo" class="logo">
             </a>
             <div class="social-media">
-                <a href="https://www.linkedin.com/in/aam-himel" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.https://www.linkedin.com/in/aamhimel/" target="_blank"><i
+                        class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/aam-himel" target="_blank"><i class="fab fa-github-square"></i></a>
                 <a href="https://medium.com/@aam.himel" target="_blank"><i class="fab fa-medium"></i></a>
             </div>
