--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                             <a class="nav-link" href="#contact">Contact</a>
                         </li>
                         <li class="nav-item px-2">
-                            <a href="" target="_blank">
+                            <a href="https://drive.google.com/file/d/1AWC0GvQu0cn4lgxDtKic4WHDQP7Vz4Ap/view"
+                                target="_blank">
                                 <button type="button" class="btn btn-success">Resume</button>
                             </a>
                         </li>
@@ -82,7 +83,8 @@
                                 <a href="#about">
                                     <button type="button" class="btn btn-success mr-3">About me</button>
                                 </a>
-                                <a href="" target="_blank">
+                                <a href="https://drive.google.com/file/d/1AWC0GvQu0cn4lgxDtKic4WHDQP7Vz4Ap/view"
+                                    target="_blank">
                                     <button type="button" class="btn btn-outline-success">Resume</button>
                                 </a>
                             </div>
@@ -122,26 +124,7 @@
         </div>
     </section>
     <!------------------- About-area end------------------>
-    <!-------------- Education-area Start ------------->
-    <section class="py-5 my-5 education">
-        <div class="container py-5 education">
-            <div class="section-title green-highlight text-center pb-5">
-                <h2>Education</h2>
-                <img src="images/divider.png" alt="divider" />
-            </div>
-            <div class="row d-flex justify-content-around">
-                <div class="col-md-5 rounded p-3 single-education">
-                    <p class="text-white pt-2">B.Sc. in Computer Science & Engineering,<br> 2017 – Present,
-                        <br>Leading University, Sylhet.</p>
-                </div>
-                <div class="col-md-5 rounded p-3 single-education">
-                    <p class="text-white pt-2">Higher Secondary School Certificate, <br> 2013 - 2015 <br>Sylhet
-                        Govt. Women’s College, Sylhet.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--------------- Education-area Start ----------->
+
     <!---------------- Skill-area Start ------------------>
     <section>
         <div class="container py-5 my-5">
@@ -199,7 +182,8 @@
             </div>
         </div>
     </section>
-    <!------------------- Skill-area end ------------->
+    <!------------------- Skill-area end ------------------->
+
     <!------------------- Project-area start---------------->
     <section id="projects" class="projects-area py-md-5 py-sm-4 py-3 ">
         <div class="container">
@@ -282,81 +266,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 my-3">
-                    <div class="card project-card">
-                        <img class="card-img-top" src="images/projects/social-buddy.png" alt="Card image">
-                        <div class="card-body">
-                            <h5 class="card-title green-highlight">Social Buddy</h5>
-                            <p class="card-text">A Single Page Application with a dynamic posts of fake data loaded from
-                                REST API. A user can see the dynamically loaded post and comments. </p>
-                            <p><strong class="green-highlight">Technology used:</strong> <br />React.js, REST API, React
-                                Router, Material UI, Netlify</p>
-                        </div>
-                        <div class="card-footer">
-                            <div class="d-flex justify-content-center">
-                                <div class="btn btn-outline-success mr-3">
-                                    <a href="https://github.com/aam-himel/social-buddy-react" target="_blank"
-                                        class="green-highlight">GitHub</a>
-                                </div>
-                                <div class="btn btn-outline-success">
-                                    <a href="https://zen-archimedes-afeb81.netlify.app/" target="_blank"
-                                        class="green-highlight">Website</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 my-3">
-                    <div class="card project-card">
-                        <img class="card-img-top" src="images/projects/lacuisine-restaurant.PNG" alt="Card image">
-                        <div class="card-body">
-                            <h5 class="card-title green-highlight">LaCuisine Restaurant</h5>
-                            <p class="card-text">Built a multipage front-end web application with fully responsive using
-                                media query & static data. A beautiful home page with summary rest of pages. A
-                                tremendous button hover effect is used.</p>
-                            <p><strong class="green-highlight">Technology used:</strong> <br />Bootstrap, HTML5, CSS3
-                            </p>
-                        </div>
-                        <div class="card-footer">
-                            <div class="d-flex justify-content-center">
-                                <div class="btn btn-outline-success mr-3">
-                                    <a href="https://github.com/aam-himel/LaCuisine-Restaurant" target="_blank"
-                                        class="green-highlight">GitHub</a>
-                                </div>
-                                <div class="btn btn-outline-success">
-                                    <a href="https://aam-himel.github.io/LaCuisine-Restaurant/" target="_blank"
-                                        class="green-highlight">Website</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 my-3">
-                    <div class="card project-card">
-                        <img class="card-img-top" src="images/projects/hot-gadgets.PNG" alt="Card image">
-                        <div class="card-body">
-                            <h5 class="card-title green-highlight">Hot Gadgets</h5>
-                            <p class="card-text">A single page front-end website built by using Bootstrap. A great hover
-                                effect
-                                was used in the category section. Carousel Banner with customized indicator.
-                            </p>
-                            <p><strong class="green-highlight">Technology used:</strong> <br />Bootstrap, GitHub
-                                Hosting, HTML5, CSS3</p>
-                        </div>
-                        <div class="card-footer">
-                            <div class="d-flex justify-content-center">
-                                <div class="btn btn-outline-success mr-3">
-                                    <a href="https://github.com/aam-himel/hot-gadgets" target="_blank"
-                                        class="green-highlight">GitHub</a>
-                                </div>
-                                <div class="btn btn-outline-success">
-                                    <a href="https://aam-himel.github.io/hot-gadgets/" target="_blank"
-                                        class="green-highlight">Website</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
+
             </div>
         </div>
     </section>
@@ -422,8 +333,8 @@
         </div>
     </section>
     <!------------------- Blog-area end------------------>
-    <!------------------- Contact-area start---------------->
-    <section id="contact" class="contact-area">
+    <!-- ----------------- Contact-area start---------------->
+    <!-- <section id="contact" class="contact-area">
         <div class="container">
             <div class="section-title text-center pt-5">
                 <p class="text-white">Feel free to contact me</p>
@@ -456,8 +367,8 @@
                 </div>
             </div>
         </div>
-    </section>
-    <!------------------- Contact-area end------------------>
+    </section> -->
+    <!------------------- Contact-area end---------------- -->
     <!------------------- Footer-area end------------------>
     <footer class="footer navbar-bg">
         <div class="footer-content container py-5 text-center">
