broken link and slide modification

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                         <li class="nav-item px-2">
                             <a class="nav-link" href="#blogs">Blogs</a>
                         </li>
-                        <li class="nav-item px-2">
+                        <!-- <li class="nav-item px-2">
                             <a class="nav-link" href="#contact">Contact</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item px-2">
                             <a href="https://drive.google.com/file/d/1AWC0GvQu0cn4lgxDtKic4WHDQP7Vz4Ap/view"
                                 target="_blank">
@@ -76,7 +76,7 @@
                                         class="fab fa-linkedin"></i></a>
                                 <a href="https://github.com/aam-himel" target="_blank"><i
                                         class="fab fa-github-square"></i></a>
-                                <a href="https://medium.com/@aam.himel" target="_blank"><i
+                                <a href="https://aamhimel.medium.com/" target="_blank"><i
                                         class="fab fa-medium"></i></a>
                             </div>
                             <div class="home-resume pt-4">
@@ -114,7 +114,7 @@
                     <div class="social-media">
                         <a href="https://linkedin.com/in/aamhimel/" target="_blank"><i class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/aam-himel" target="_blank"><i class="fab fa-github-square"></i></a>
-                        <a href="https://medium.com/@aam.himel" target="_blank"><i class="fab fa-medium"></i></a>
+                        <a href="https://aamhimel.medium.com/" target="_blank"><i class="fab fa-medium"></i></a>
                     </div>
                 </div>
                 <div class="col-md-5 offset-md-1 about-img col-auto">
@@ -127,8 +127,8 @@
 
     <!---------------- Skill-area Start ------------------>
     <section>
-        <div class="container py-5 my-5">
-            <div class="skills text-dark">
+        <div class="container py-5 my-5 ">
+            <div class="skills text-dark ">
                 <div class="section-title green-highlight text-center pb-5">
                     <h2>My Skills</h2>
                     <img src="images/divider.png" alt="divider" />
@@ -145,6 +145,7 @@
                             <li class="list-inline-item p-1 m-1 rounded font-weight-bold">REST API</li>
                             <li class="list-inline-item p-1 m-1 rounded font-weight-bold">React Router</li>
                             <li class="list-inline-item p-1 m-1 rounded font-weight-bold">Bootstrap</li>
+                            <li class="list-inline-item p-1 m-1 rounded font-weight-bold">Styled Components</li>
                             <li class="list-inline-item p-1 m-1 rounded font-weight-bold">REST API</li>
                             <li class="list-inline-item p-1 m-1 rounded font-weight-bold">HTML</li>
                             <li class="list-inline-item p-1 m-1 rounded font-weight-bold">CSS</li>
@@ -159,9 +160,7 @@
                             <li class="list-inline-item p-1 m-1 rounded font-weight-bold">JSON</li>
                             <li class="list-inline-item p-1 m-1 rounded font-weight-bold">SASS</li>
                             <li class="list-inline-item p-1 m-1 rounded font-weight-bold">WordPress</li>
-                            <li class="list-inline-item p-1 m-1 rounded font-weight-bold">PHP</li>
                             <li class="list-inline-item p-1 m-1 rounded font-weight-bold">MySQL</li>
-                            <li class="list-inline-item p-1 m-1 rounded font-weight-bold">JAVA</li>
                             <li class="list-inline-item p-1 m-1 rounded font-weight-bold">C/C++</li>
                             <li class="list-inline-item p-1 m-1 rounded font-weight-bold">OOP</li>
                         </ul>
@@ -175,7 +174,6 @@
                             <li class="list-inline-item p-1 m-1 rounded font-weight-bold">Firebase</li>
                             <li class="list-inline-item p-1 m-1 rounded font-weight-bold">Netlify</li>
                             <li class="list-inline-item p-1 m-1 rounded font-weight-bold">Heroku</li>
-                            <li class="list-inline-item p-1 m-1 rounded font-weight-bold">Notepad++</li>
                         </ul>
                     </div>
                 </div>
@@ -283,47 +281,46 @@
                 <div class="card-deck">
                     <div class="col-md-4 col-sm-6 my-3">
                         <div class="card blog-card">
-                            <img class="card-img-top" src="images/blogs/blog-1.png" alt="blog">
+                            <img class="card-img-top" src="https://miro.medium.com/max/1000/1*yPKvk9NG2H05YsjL9d87jA.jpeg" alt="blog">
                             <div class="card-body">
-                                <h5 class="card-title green-highlight">20 Must Learn Interview Questions From HTML </h5>
-                                <p class="card-text">Discussed very basic topics of HTML & HTML5 that is needed to start
-                                    a
-                                    interview.</p>
+                                <h5 class="card-title green-highlight">Modern JavaScript Notes — ES6 </h5>
+                                <p class="card-text">Here I have included some of the exciting features of modern JavaScript. Stay with me till the end.</p>
                             </div>
                             <div class="card-footer">
                                 <div class="btn btn-outline-success">
-                                    <a href="#" target="_blank" class="green-highlight">Read More</a>
+                                    <a href="https://aamhimel.medium.com/modern-javascript-notes-es6-cf80212e9165" target="_blank" class="green-highlight">Read More</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6 my-3">
                         <div class="card blog-card">
-                            <img class="card-img-top" src="images/blogs/blog-1.png" alt="blog">
+                            <img class="card-img-top" src="https://miro.medium.com/max/1000/0*oApRSKuGDjHT_RBl" alt="blog">
                             <div class="card-body">
-                                <h5 class="card-title green-highlight">20 Must Learn Interview Questions From HTML </h5>
-                                <p class="card-text">Discussed very basic topics of HTML & HTML5 that is needed to start
-                                    a
-                                    interview.</p>
+                                <h5 class="card-title green-highlight">JavaScript — Important References For Junior Developer </h5>
+                                <p class="card-text">
+                                    There are many programming languages out there, most of them are similar in many aspects and also different from other aspects. JavaScript is one of the most exciting language out there...
+                                </p>
                             </div>
                             <div class="card-footer">
                                 <div class="btn btn-outline-success">
-                                    <a href="#" target="_blank" class="green-highlight">Read More</a>
+                                    <a href="https://aamhimel.medium.com/javascript-important-references-for-junior-developer-afb3685d16e0" target="_blank" class="green-highlight">Read More</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6 my-3">
                         <div class="card blog-card">
-                            <img class="card-img-top" src="images/blogs/blog-1.png" alt="blog">
+                            <img class="card-img-top" src="https://miro.medium.com/max/700/0*VYvkduSdNWpGuyaB" alt="blog">
                             <div class="card-body">
-                                <h5 class="card-title green-highlight">20 Must Learn Interview Questions From HTML </h5>
-                                <p class="card-text">Discussed very basic topics of HTML & HTML5 that is needed to start
-                                    a interview.</p>
+                                <h5 class="card-title green-highlight">How To Add Code Highlights On Medium Article. </h5>
+                                <p class="card-text">
+                                    When writing a medium article specially for programmers 💻 sometimes it becomes necessary to share code so that viewers can easily understand what the writer talking about....
+                                </p>
                             </div>
                             <div class="card-footer">
                                 <div class="btn btn-outline-success">
-                                    <a href="#" target="_blank" class="green-highlight">Read More</a>
+                                    <a href="https://aamhimel.medium.com/how-to-add-code-highlights-on-medium-article-6edfef6c2d8b" target="_blank" class="green-highlight">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -378,7 +375,7 @@
             <div class="social-media">
                 <a href="https://linkedin.com/in/aamhimel/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/aam-himel" target="_blank"><i class="fab fa-github-square"></i></a>
-                <a href="https://medium.com/@aam.himel" target="_blank"><i class="fab fa-medium"></i></a>
+                <a href="https://aamhimel.medium.com/" target="_blank"><i class="fab fa-medium"></i></a>
             </div>
             <p class="text-white pt-2"><small>Copyright &copy; 2020 by aamHimel || All Right Reserved.</small></p>
         </div>
